# bittensor-panel

./: pyproject.toml
app/envs/prod/: gunicorn.conf.py
app/src/bittensor_panel/: asgi.py  celery.py  settings.py  urls.py
app/src/bittensor_panel/core/: admin.py  bt.py  exceptions.py  models.py  services.py
app/src/bittensor_panel/core/migrations/: 0001_initial.py
app/src/bittensor_panel/core/tests/: settings.py  test_admin.py  test_bt.py  test_services.py
app/src/bittensor_panel/templates/admin/core/hyperparameter/: change_list.html
app/src/bittensor_panel/users/: apps.py
app/src/bittensor_panel/users/migrations/: 0001_initial.py
envs/dev/: .env.template
